# 4ficherosBinarios

FicherosBinarios/ficherosBinarios/: CMakeLists.txt
FicherosBinarios/ficherosBinarios/ejemplo1Clase/: main.c
FicherosBinarios/ficherosBinarios/ejemplo2Clase/: main.c
FicherosBinarios/ficherosBinarios/ejercicio1/: main.c
FicherosBinarios/ficherosBinarios/ejercicio2/: main.c
FicherosBinarios/ficherosBinarios/ejercicio3/: main.c
FicherosBinarios/ficherosBinarios/ejercicio4/: main.c
FicherosBinarios/ficherosBinarios/ejercicio5/: main.c
FicherosBinarios/ficherosBinarios/ficherosBinarios/: main.c
FicherosBinarios/ficherosBinarios/ficherosBinarios.xcodeproj/: project.pbxproj
FicherosBinarios/ficherosBinarios/ficherosBinarios.xcodeproj/project.xcworkspace/xcuserdata/Toni.xcuserdatad/: UserInterfaceState.xcuserstate
FicherosBinarios/ficherosBinarios/ficherosBinarios.xcodeproj/xcuserdata/Toni.xcuserdatad/xcschemes/: xcschememanagement.plist
